# ExtraDox

./: .gitignore  README.md
Case/: ExtraDox-Left.step  ExtraDox-Right.step  ExtraDox.scad  Makefile  common.scad  leftBottom.scad  leftTop.scad  positions.scad  rightBottom.scad  rightTop.scad
Keycaps/: 1.5u.step  1u.FCStd  1u.FCStd1  1u.step  2u.step  README.md
PCB/: .gitignore
PCB/3dmodels/: 1x12 Male Pin Header.STEP  CX90M-16P.step  Kailh Choc FunkMonk 1u.step  TS-1087S-020.stp  choc1_5u.step  choc2u.step
PCB/Left/: ExtraDox-Left.kicad_pcb  ExtraDox-Left.kicad_prl  ExtraDox-Left.kicad_pro  ExtraDox-Left.kicad_sch  fp-info-cache  fp-lib-table
PCB/Right/: ExtraDox-Right.kicad_pcb  ExtraDox-Right.kicad_prl  ExtraDox-Right.kicad_pro  ExtraDox-Right.kicad_sch  fp-info-cache
PCB/additional-footprints/: CX90M-16P.kicad_sym  HRS_CX90M-16P.kicad_mod  KailhHotswapChoc1.kicad_mod  KailhHotswapChoc15.kicad_mod  KailhHotswapChoc2.kicad_mod  MountingHole4.318.kicad_mod  QFN-44-1EP_7x7mm_P0.5mm_EP5.2x5.2mm_ThermalVias_JLCPCB.kicad_mod  TRRS-PJ-320A.kicad_mod  TS-1087S.kicad_mod  TSSOP-24_4.4x7.8mm_P0.65mm_JLCPCB.kicad_mod
Utils/: convert-pos-jlcpcb.py  find_footprints.py  pyproject.toml
