[tool.poetry]
name = "extradox-utils"
version = "0.1.0"
description = ""
authors = ["Philippe Daouadi <philippe@ud2.org>"]

[tool.poetry.dependencies]
python = "^3.10"
sexpdata = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
